--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>今日もいい天気ですね!w</h1>
-    
+    <h1>今日もいい天気ですね</h1>
+    <script src="./index.js"> </script>
 </body>
 </html>
